2003-02-27  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	s/fribdi_in_path/fribidi_in_path/

	* todo-2.6:
	spell checking and some reformatting

2003-02-26  olicha  <olivier.chapuis@free.fr>

	* fvwm/borders.c (border_setup_bar_pixmaps):
	Fixed a miss-print which can cause a core dump

	* todo-2.6: 
	Added a 2.6 TODO file

2003-02-25  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/focus.c (focus_grab_buttons): Fix compile problems Forte7,
	void functioin cannot return a value.

2003-02-25  olicha  <olivier.chapuis@free.fr>

	* configure.in:
	Fixed compilation warning if fribidi is in path

2003-02-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/windowlist.c (CMD_WindowList):
	removed unused instruction

2003-02-22  Dan Espen  <dane@mk.telcordia.com>

	* configure.in: Remove nested function from -Werror check.
	Lets configure work without gcc.

	* fvwm/read.h:
	* fvwm/read.c (run_command_stream): Make Break work from PipeRead.

2003-02-21  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/functions.c (__run_complex_function_items): Make Break start
	working again.

2003-02-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (get_outline_rects):
	(draw_move_resize_grid):
	initial drawing and final undrawing of wire frame no longer toggles the
	pixel in the top left corner of the screen

	* fvwm/expand.c (expand_vars):
	disabled warnings about one letter variables

2003-02-17  Dan Espen  <dane@mk.telcordia.com>

	* README: Update to reflect release 2.5.x.
	* NEWS: Update news for FvwmPager drag fix.

2003-02-15  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1.in:
	Fixed a typo

2003-02-13  olicha  <olivier.chapuis@free.fr>

	* fvwm/gnome.c (GNOME_SetClientList):
	Applied David Fries patch which fixes a possible crash with more
	than 256 windows
	(GNOME_SetClientList):
	malloc -> safemalloc

2003-02-09  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in (Note): Update %space/%tab description in menu.
	Give the XorValue range.
