@@ -50,8 +50,8 @@ or
 
 If the pager is started with the \fI-transient\fP option, the next
 time a button is released the pager is closed. Note that this
-option does only work if the window style of the pager window is
-'sticky' (see the fvwm man page). You should use the 'StaysOnTop'
+option does only work if the window style of the pager window is 'sticky'
+(see the fvwm man page). You should use the 'StaysOnTop'
 style too.
 
 Example:
